<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_pratos" tools:context="br.senac.pi.bonappetit.Pratos"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">
    <ImageView

        android:layout_width="224dp"
        android:layout_height="246dp"
        android:id="@+id/imgCarne"
        android:src="@drawable/carne"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|top"
        android:layout_weight="0.17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/txtCarne"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgCarne"
        android:id="@+id/textView8"
        android:layout_gravity="center"
        android:layout_weight="0.17" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/txtIngCarne"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_weight="0.17" />

    <Button
        android:id="@+id/btCarme"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
       android:text="@string/btFazerPedido"
        android:layout_weight="0.17" />

    <ImageView
        android:layout_width="224dp"
        android:layout_height="226dp"
        android:id="@+id/imgPicadinho"
        android:src="@drawable/picadinho"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtPicadinho"
        android:id="@+id/textView9"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtIngPicadinho"
        android:id="@+id/textView10"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btPicadinho"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btFazerPedido"
        android:layout_weight="0.17" />


</LinearLayout>
</ScrollView>
