<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sobremesas" tools:context="br.senac.pi.bonappetit.Sobremesas">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView

            android:layout_width="224dp"
            android:layout_height="246dp"
            android:id="@+id/imgRocambole"
            android:src="@drawable/rocambole"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|top"
            android:layout_weight="0.17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/txtRocambole"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:layout_weight="0.17" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/txtIngRocambole"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:layout_weight="0.17" />

        <Button
            android:id="@+id/btRocambole"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/btFazerPedido"
            android:layout_weight="0.17" />

        <ImageView
            android:layout_width="224dp"
            android:layout_height="226dp"
            android:id="@+id/imgtaçaUruguaia"
            android:src="@drawable/taca"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txttaçaUruguaia"
            android:id="@+id/textView9"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtIngtaçaUruguaia"
            android:id="@+id/textView10"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/bttaçaUruguaia"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/btFazerPedido"
            android:layout_weight="0.17" />


    </LinearLayout>
</ScrollView>
